@@ -157,6 +157,10 @@ Changes on 1.2.0 since 1.1.0:
 * Added new menu option 'File'->'Open Selected Files' to launch selection
     for those who cannot use neither keyboard nor selection context menu.
 
+* Added new config option 'show_statusbar' with default to true which
+    defines should status bar be shown or hidden. It's controllable via
+    menu 'View'->'Show Status Bar'.
+
 
 Changes on 1.1.0 since 1.0.1:
 
